css/style.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

@import url("https://p.typekit.net/p.css?s=1&k=jut7cbo&ht=tk&f=36064.36066&a=18270221&app=typekit&e=css");

@font-face {
  font-family: "penumbra-serif-std";
  src: url("https://use.typekit.net/af/024c41/00000000000000003b9b0a89/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff2"), url("https://use.typekit.net/af/024c41/00000000000000003b9b0a89/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff"), url("https://use.typekit.net/af/024c41/00000000000000003b9b0a89/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("opentype");
  font-display: auto;
  font-style: normal;
  font-weight: 400;
  font-stretch: normal;
}
@font-face {
  font-family: "penumbra-serif-std";
  src: url("https://use.typekit.net/af/7d45ff/00000000000000003b9b0a8b/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("woff2"), url("https://use.typekit.net/af/7d45ff/00000000000000003b9b0a8b/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("woff"), url("https://use.typekit.net/af/7d45ff/00000000000000003b9b0a8b/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("opentype");
  font-display: auto;
  font-style: normal;
  font-weight: 700;
  font-stretch: normal;
}

body, #carousel {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

main {
  display: flex;
  flex-direction: column;
}

#topLayer {
  transition: 0.3s linear;
  display: none;
  position: fixed;
  top: 0;
  z-index: 3000;
  padding-top: 20vh;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.6);
  -webkit-animation: fadeIn 0.2s;
          animation: fadeIn 0.2s;
}
#topLayer img {
  width: 100%;
  padding: 0 25%;
  -webkit-animation: fadeIn 0.2s;
          animation: fadeIn 0.2s;
}
#topLayer p {
  margin: 0 auto;
  text-align: center;
  opacity: 0.6;
}

#btn {
  position: absolute;
  top: 370px;
  align-self: center;
  width: 25%;
  z-index: 2000;
  height: 60px;
  background: linear-gradient(to bottom, #3c91c5, #225b8b);
  border: 2px solid #060b12;
  border-radius: 10px;
  color: white;
  filter: drop-shadow(0px 10px 20px rgba(0, 0, 0, 0.2666666667));
  outline: 2px solid #AB8D42;
  font-family: "penumbra-serif-std-bold", sans-serif;
  font-weight: bolder;
  cursor: pointer;
}
#btn:hover{
  background: linear-gradient(to bottom, #45a4df, #22658e);
}
#btn span {
  font-size: 2em;
  letter-spacing: 0;
}
#btn span::before {
  text-shadow: 0 3px 5px rgba(0, 0, 0, 0.4);
}

#carousel {
  overflow: hidden;
  width: 100%;
  height: 400px;
  filter: drop-shadow(0px 10px 20px rgba(0, 0, 0, 0.2666666667));
  justify-content: stretch;
  border-bottom: 1px solid #b7cedd;
}
#carousel img {
  width: 100vw;
  position: absolute;
  top: 0;
  z-index: -1;
  filter: blur(2px);
  height: 400px;
}

img {
  filter: drop-shadow(0px 10px 20px rgba(0, 0, 0, 0.2666666667));
}

h1, h3, span, h2 {
  color: white;
  font-family: "penumbra-serif-std";
  text-align: center;
  background: linear-gradient(rgb(245, 251, 255), rgb(191, 230, 255));
  -webkit-background-clip: text;
          background-clip: text;
  -webkit-text-fill-color: transparent;
  line-height: 1.2;
}

h1 {
  font-size: 5em;
  letter-spacing: 1px;
  padding: 0;
  filter: drop-shadow(0px 0px 5px #000000);
  line-height: 2;
}

h3 {
  font-size: 2rem;
  padding: 0;
  margin: 0;
  filter: drop-shadow(0px 0px 10px #000000);
}

h2 {
  background: linear-gradient(#ffe98d, #e19f27);
  -webkit-background-clip: text;
          background-clip: text;
  text-transform: uppercase;
  font-size: 2em;
}

p {
  color: #b7cedd;
  line-height: 1.6em;
  margin-bottom: 1.3rem;
  font-size: 16px !important;
  font-family: "Noto Sans", sans-serif;
}

body {
  margin: 0;
  background-color: #0d1421;
  overflow-x: hidden;
  max-width: 100%;
}

main {
  overflow-x: hidden;
  margin: 200px 20% 0 20%;
}

.row, .row2 {
  margin-bottom: 100px;
  display: flex;
  justify-content: space-around;
}
.row div, .row2 div {
  padding-right: 120px;
}
.row div *, .row2 div * {
  text-align: left;
}
.row img, .row2 img {
  max-width: 50%;
  cursor: pointer;
  z-index: 1000;
  transition: 0.5s linear;
}

.row2 div {
  padding-left: 120px;
  padding-right: 0;
}

footer {
  padding: 2em;
  background-color: #10161e;
  border-top: 1px solid #2c2b22;
}
footer p {
  text-align: center;
}

sub {
  font-size: 20px;
  vertical-align: baseline;
}

.card {
  -webkit-animation: card 24s infinite;
          animation: card 24s infinite;
}

@-webkit-keyframes card {
  0% {
    transform: translateX(0);
  }
  16% {
    transform: translateX(0);
  }
  28% {
    transform: translateX(-100vw);
  }
  40% {
    transform: translateX(-100vw);
  }
  50% {
    transform: translateX(-200vw);
  }
  62% {
    transform: translateX(-200vw);
  }
  75% {
    transform: translateX(-300vw);
  }
  86% {
    transform: translateX(-300vw);
  }
  100% {
    transform: translateX(-400vw);
  }
}

@keyframes card {
  0% {
    transform: translateX(0);
  }
  16% {
    transform: translateX(0);
  }
  28% {
    transform: translateX(-100vw);
  }
  40% {
    transform: translateX(-100vw);
  }
  50% {
    transform: translateX(-200vw);
  }
  62% {
    transform: translateX(-200vw);
  }
  75% {
    transform: translateX(-300vw);
  }
  86% {
    transform: translateX(-300vw);
  }
  100% {
    transform: translateX(-400vw);
  }
}
.c2 {
  left: 100vw;
}

.c3 {
  left: 200vw;
}

.c4 {
  left: 300vw;
}

.c5 {
  left: 400vw;
}

a {
  text-decoration: none;
  color: inherit;
  font-weight: bold;
}

@media (max-width: 1300px) {
  main {
    margin: 0;
    padding-top: 150px;
  }
  .row, .row2 {
    overflow: hidden;
    justify-content: center;
  }
  .row div, .row2 div {
    width: 30%;
  }
  .row img, .row2 img {
    width: 30%;
    margin: 0;
  }
}
@media (max-width: 1100px) {
  .row {
    flex-direction: column;
  }
  .row div {
    padding: 0;
  }
  .row * {
    width: 100% !important;
    padding: 0 5% !important;
    text-align: center !important;
  }
  .row img {
    margin: 0 auto;
  }
  .row2 {
    flex-direction: column-reverse;
  }
  .row2 div {
    padding: 0;
  }
  .row2 * {
    width: 100% !important;
    padding: 0 5% !important;
    text-align: center !important;
  }
  .row2 img {
    margin: 0 auto;
  }
}
@media (max-width: 800px) {
  #btn {
    width: 40%;
  }
  #topLayer img {
    padding: 0 10% !important;
  }
}
@media (max-width: 500px) {
  h1 {
    margin-top: 100px;
    margin-bottom: 20px;
    font-size: 3.5em;
  }
  h3 {
    font-size: 1.5em;
    padding: 0 10px;
  }
  .row img, .row2 img {
    width: -webkit-max-content !important;
    width: -moz-max-content !important;
    width: max-content !important;
    padding: 0 !important;
  }
  #btn {
    width: 60%;
  }
}
@media (max-width: 350px) {
  #carousel {
    height: 300px;
  }
  #carousel img {
    height: 300px;
  }
  h1 {
    margin-top: 50px;
    font-size: 3em;
  }
  h3 {
    font-size: 1.5em;
  }
  #btn{
    top: 275px
  }
}
@-webkit-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
::-webkit-scrollbar{
  background-color: #090e17;
  width: 15px;
}
::-webkit-scrollbar-thumb{
  background-color: #3c91c5;
  border-radius: 5px;
  filter: drop-shadow(0px 10px 20px rgba(0, 0, 0, 0.2666666667));
}

